--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^9.0.0",
+    "accordion-collapse-react-native": "^0.1.9",
     "expo": "^32.0.0",
+    "native-base": "^2.11.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
-    "react-native-fontawesome": "^6.0.1",
     "react-native-paper": "^2.5.0",
     "react-native-tab-view": "^1.3.1",
     "react-navigation": "^3.0.9"
